1 line commit - Fix Stylesheet

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,9 @@
 	<meta name="author" content="Łukasz Holeczek">
 	<meta name="keyword" content="Bootstrap,Admin,Template,Open,Source,AngularJS,Angular,Angular2,Angular 2,Angular4,Angular 4,jQuery,CSS,HTML,RWD,Dashboard,React,React.js,Vue,Vue.js">
 	<link rel="shortcut icon" href="assets/img/favicon.png">
-	<title>CoreUI - Open Source Bootstrap Admin Template</title>
+  <title>CoreUI - Open Source Bootstrap Admin Template</title>
+  <link href="https://unpkg.com/angular-calendar@0.23.7/css/angular-calendar.css" rel="stylesheet">
+
 </head>
 
 <!-- BODY options, add following classes to body to change options
