UI Changes - BananiumLabs Credit

--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,11 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="CoreUI - Open Source Bootstrap Admin Template">
-	<meta name="author" content="Łukasz Holeczek">
-	<meta name="keyword" content="Bootstrap,Admin,Template,Open,Source,AngularJS,Angular,Angular2,Angular 2,Angular4,Angular 4,jQuery,CSS,HTML,RWD,Dashboard,React,React.js,Vue,Vue.js">
+  <meta name="description" content="Cheery Class - Simplify Conflict Management And Reduce Stress!">
+	<meta name="author" content="Eric Qian,Ben Cuan">
+	<meta name="keyword" content="Stress Management,Cherry,Classroom Tools">
 	<link rel="shortcut icon" href="assets/img/favicon.png">
-  <title>CoreUI - Open Source Bootstrap Admin Template</title>
+  <title>Cheery Class - Simplify Conflict Management And Reduce Stress!</title>
   <link href="https://unpkg.com/angular-calendar@0.23.7/css/angular-calendar.css" rel="stylesheet">
 
 </head>
